Greate Plains David 3/scc-3387-retrieval/force-app/main/default/objects/Incident/fields/Affected_Area_Region__c.field-meta.xml
<CustomField>
    <fullName>Affected_Area_Region__c</fullName>
    <label>Affected Area/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>