Greate Plains David 3/scc-3387-retrieval/force-app/main/default/objects/Incident/fields/Close_Related_Trouble_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Close_Related_Trouble_Tickets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SCC-3380: Confirmation that closing this Incident should also close Trouble Ticket cases linked in Case Related Issue. Incident_After_Update only bulk-closes related cases when this box is checked.</description>
    <inlineHelpText>SCC-3380: Check this box when setting Status to Closed if the related Trouble Tickets should be closed as well. Leave unchecked to close only this Incident.</inlineHelpText>
    <label>Close Related Trouble Tickets</label>
    <type>Checkbox</type>
</CustomField>