Greate Plains David 3/scc-3387-retrieval/force-app/main/default/objects/Incident/fields/Equipment_Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Facility_ID__c</fullName>
    <label>Equipment/Facility ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>