Greate Plains David 3/scc-3387-retrieval/force-app/main/default/objects/Incident/fields/Estimated_Customers_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Customers_Impacted__c</fullName>
    <label>Estimated Customers Impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>