Greate Plains David 3/scc-3387-retrieval/force-app/main/default/objects/Incident/fields/Estimated_Restoration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Restoration_Hours__c</fullName>
    <label>Estimated Restoration Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>