Greate Plains David 3/scc-3387-retrieval/force-app/main/default/objects/Incident/fields/NOC_Ticket_Number_Reference__c.field-meta.xml
<CustomField>
    <fullName>NOC_Ticket_Number_Reference__c</fullName>
    <label>NOC Ticket Number Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>