Greate Plains David 3/scc-3387-retrieval/force-app/main/default/objects/Incident/recordTypes/Outage.recordType-meta.xml
<RecordType>
    <fullName>Outage</fullName>
    <active>true</active>
    <description>Used by NOC reps to track service outages</description>
    <label>Outage</label>
</RecordType>